--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
-# Core dependencies
-numpy>=1.20.0
-scipy>=1.7.0
-matplotlib>=3.4.0
+# Web Framework
+Flask==3.0.0
+Flask-SQLAlchemy==3.1.1
+Flask-CORS==4.0.0
+Flask-JWT-Extended==4.5.3
 
-# Add your project dependencies here
+# Database
+SQLAlchemy==2.0.23
+
+# Security
+bcrypt==4.1.1
+python-dotenv==1.0.0
+
+# File handling
+Werkzeug==3.0.1
+
+# Utilities
+python-dateutil==2.8.2
